--- a/templates/panel-debug.html
+++ b/templates/panel-debug.html
@@ -1,19 +1,19 @@
 {{template "header.html" . }}
-<div class="colstack">
+<div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
-<main id="panel_dashboard_right" class="colstack_right">
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><a>Debug</a></div>
-	</div>
-	<div id="panel_debug" class="colstack_grid">
-		<div class="grid_item grid_stat"><span>Uptime</span></div>
-		<div class="grid_item grid_stat"><span>Open DB Conns</span></div>
-		<div class="grid_item grid_stat"><span>Adapter</span></div>
+	<main id="panel_dashboard_right" class="colstack_right">
+		<div class="colstack_item colstack_head">
+			<div class="rowitem"><a>Debug</a></div>
+		</div>
+		<div id="panel_debug" class="colstack_grid">
+			<div class="grid_item grid_stat"><span>Uptime</span></div>
+			<div class="grid_item grid_stat"><span>Open DB Conns</span></div>
+			<div class="grid_item grid_stat"><span>Adapter</span></div>
 
-		<div class="grid_item grid_stat"><span>{{.Uptime}}</span></div>
-		<div class="grid_item grid_stat"><span>{{.OpenConns}}</span></div>
-		<div class="grid_item grid_stat"><span>{{.DBAdapter}}</span></div>
-	</div>
-</main>
+			<div class="grid_item grid_stat"><span>{{.Uptime}}</span></div>
+			<div class="grid_item grid_stat"><span>{{.OpenConns}}</span></div>
+			<div class="grid_item grid_stat"><span>{{.DBAdapter}}</span></div>
+		</div>
+	</main>
 </div>
 {{template "footer.html" . }}
