--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 
-<div class="colstack">
+<div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
 <script>
 var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_access','default','custom']};
