--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 
-<div class="colstack">
+<div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
 <script>var form_vars = {
 	'forum_active': ['Hide','Show'],
