--- a/templates/panel-groups.html
+++ b/templates/panel-groups.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<div class="colstack">
+<div class="colstack panel_stack">
 
 {{template "panel-menu.html" . }}
 <main class="colstack_right">
