--- a/templates/forum.html
+++ b/templates/forum.html
@@ -4,10 +4,10 @@
 {{if ne .LastPage .Page}}<link rel="prerender" href="/forum/{{.Forum.ID}}?page={{add .Page 1}}" />
 <div id="nextFloat" class="next_button"><a class="next_link" aria-label="Go to the next page" rel="next" href="/forum/{{.Forum.ID}}?page={{add .Page 1}}">&gt;</a></div>{{end}}
 
-<main>
+<main itemscope itemtype="http://schema.org/ItemList">
 	<div id="forum_head_block" class="rowblock rowhead topic_list_title_block">
 		<div class="rowitem forum_title{{if ne .CurrentUser.ID 0}} has_opt{{end}}">
-			<h1>{{.Title}}</h1>
+			<h1 itemprop="name">{{.Title}}</h1>
 		</div>
 		{{if ne .CurrentUser.ID 0}}
 			{{if .CurrentUser.Perms.CreateTopic}}
@@ -74,7 +74,7 @@
 			<span class="selector"></span>
 			<a href="{{.Creator.Link}}"><img src="{{.Creator.Avatar}}" height="64" alt="{{.Creator.Name}}'s Avatar" title="{{.Creator.Name}}'s Avatar" /></a>
 			<span class="topic_inner_left">
-				<a class="rowtopic" href="{{.Link}}"><span>{{.Title}}</span></a>
+				<a class="rowtopic" href="{{.Link}}" itemprop="itemListElement"><span>{{.Title}}</span></a>
 				<br /><a class="rowsmall starter" href="{{.Creator.Link}}">{{.Creator.Name}}</a>
 				{{/** TODO: Avoid the double '|' when both .IsClosed and .Sticky are set to true. We could probably do this with CSS **/}}
 				{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="Status: Closed"> | &#x1F512;&#xFE0E</span>{{end}}
