--- a/templates/panel-dashboard.html
+++ b/templates/panel-dashboard.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<div class="colstack">
+<div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
 		<div class="colstack_item colstack_head">
