--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -1,20 +1,18 @@
 {{template "header.html" . }}
-<div class="colstack">
-
+<div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
-<main class="colstack_right">
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>Settings</h1></div>
-	</div>
-	<div id="panel_settings" class="colstack_item rowlist">
-		{{range $key, $value := .Something}}
-		<div class="rowitem panel_compactrow editable_parent">
-			<a href="/panel/settings/edit/{{$key}}" class="editable_block panel_upshift">{{$key}}</a>
-			<a class="panel_compacttext to_right">{{$value}}</a>
+	<main class="colstack_right">
+		<div class="colstack_item colstack_head">
+			<div class="rowitem"><h1>Settings</h1></div>
 		</div>
-		{{end}}
-	</div>
-</main>
-
+		<div id="panel_settings" class="colstack_item rowlist">
+			{{range $key, $value := .Something}}
+			<div class="rowitem panel_compactrow editable_parent">
+				<a href="/panel/settings/edit/{{$key}}" class="editable_block panel_upshift">{{$key}}</a>
+				<a class="panel_compacttext to_right">{{$value}}</a>
+			</div>
+			{{end}}
+		</div>
+	</main>
 </div>
 {{template "footer.html" . }}
