--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<div class="colstack">
+<div class="colstack panel_stack">
 
 <nav class="colstack_left" aria-label="The control panel menu">
 	<div class="colstack_item colstack_head">
