--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -1,3 +1,44 @@
+#back {
+	padding-top: 0px;
+}
+#main {
+	padding-left: 0px;
+}
+.colstack_left {
+	background-color: hsl(0,0%,90%);
+}
+.colstack_left .colstack_head {
+	margin-top: -1px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	padding-bottom: 12px;
+    padding-top: 12px;
+    border-bottom: 1.5px solid var(--element-border-color);
+}
+.colstack_left .rowmenu .passive:first-child {
+    border-top: none;
+}
+.colstack_left .rowmenu .passive:last-child {
+    border-bottom: 0.5px solid var(--element-border-color) !important;
+}
+/*.colstack_left > *:not(.colstack_head):last-child {
+	border-bottom: 0.5px solid var(--element-border-color) !important;
+}*/
+.submenu {
+	margin-left: 12px;
+}
+.submenu_fallback {
+	display: none;
+}
+.colstack_right {
+	margin-right: 14px;
+	margin-top: 14px;
+	margin-bottom: 14px;
+}
+.footer {
+	margin-top: 0px;
+}
+
 .complex_rowlist {
 	background-color: inherit !important;
 	border: none !important;
