Added the views graph to the Control Panel. Added support for strikethrough and underline HTML. Added DateCutoff to the Accumulator Select Builder for MySQL.

--- a/templates/panel-analytics-views.html
+++ b/templates/panel-analytics-views.html
@@ -6,7 +6,34 @@
 			<div class="rowitem"><a>Views</a></div>
 		</div>
 		<div id="panel_analytics" class="colstack_graph_holder">
+			<div class="ct-chart"></div>
 		</div>
 	</main>
 </div>
+<script>
+let labels = [];
+let rawLabels = [{{range .PrimaryGraph.Labels}}
+{{.}},{{end}}
+];
+for(const i in rawLabels) {
+	let date = new Date(rawLabels[i]*1000);
+	console.log("date: ", date);
+	let minutes = "0" + date.getMinutes();
+	let label = date.getHours() + ":" + minutes.substr(-2);
+	console.log("label:", label);
+	labels.push(label);
+}
+
+let seriesData = [{{range .PrimaryGraph.Series}}
+{{.}},{{end}}
+];
+seriesData = seriesData.reverse();
+
+Chartist.Line('.ct-chart', {
+  labels: labels,
+  series: [seriesData],
+}, {
+  height: '250px',
+});
+</script>
 {{template "footer.html" . }}
