Added view graphs for the individual routes. Made some minor improvements to Cosora.

--- a/templates/account-own-edit-email.html
+++ b/templates/account-own-edit-email.html
@@ -1,18 +1,18 @@
 {{template "header.html" . }}
-<div class="colstack account">
+<div class="colstack account account_emails">
 	{{template "account-menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
 			<div class="rowitem"><h1>Emails</h1></div>
 		</div>
-		<div class="colstack_item">
+		<div class="colstack_item rowlist">
 			<!-- TODO: Do we need this inline CSS? -->
 			{{range .ItemList}}
 			<div class="rowitem" style="font-weight: normal;">
 				<a style="text-transform: none;">{{.Email}}</a>
-				<span style="float: right">
-				<span class="username">{{if .Primary}}Primary{{else}}Secondary{{end}}</span>
-				{{if .Validated}}<span class="username" style="color: green;">Verified</span>{{else}}<a class="username" style="color: crimson;">Resend Verification Email</a>{{end}}
+				<span style="float: right" class="to_right">
+					<span class="username">{{if .Primary}}Primary{{else}}Secondary{{end}}</span>
+					{{if .Validated}}<span class="username" style="color: green;">Verified</span>{{else}}<a class="username" style="color: crimson;">Resend Verification Email</a>{{end}}
 				</span>
 			</div>
 			{{end}}
