--- a/templates/panel-groups.html
+++ b/templates/panel-groups.html
@@ -35,7 +35,7 @@
 		<form action="/panel/groups/create/?session={{.CurrentUser.Session}}" method="post">
 			<div class="formrow">
 				<div class="formitem formlabel"><a>Name</a></div>
-				<div class="formitem"><input name="group-name" type="text" /></div>
+				<div class="formitem"><input name="group-name" type="text" placeholder="Administrator" /></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a>Type</a></div>
