--- a/templates/panel-analytics-routes.html
+++ b/templates/panel-analytics-routes.html
@@ -3,13 +3,13 @@
 {{template "panel-menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
 		<div class="colstack_item colstack_head">
-			<div class="rowitem"><a>Routes</a></div>
+			<div class="rowitem"><a>Routes (24 hours)</a></div>
 		</div>
 		<div id="panel_analytics_routes" class="colstack_item rowlist">
 			{{range .ItemList}}
 			<div class="rowitem panel_compactrow editable_parent">
-				<a href="/panel/groups/edit/{{.Route}}" class="panel_upshift">{{.Route}}</a>
-				<span class="panel_compacttext to_right">{{.Count}}</span>
+				<a href="/panel/analytics/route/{{.Route}}" class="panel_upshift">{{.Route}}</a>
+				<span class="panel_compacttext to_right">{{.Count}} views</span>
 			</div>
 			{{end}}
 		</div>
