We now track global user agent stats and have a currently simple Control Panel interface for that. Fixed a possible out of bounds panic in DefaultRouteViewCounter.Bump()

--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -36,6 +36,9 @@
 			<a href="/panel/analytics/routes/">Routes</a>
 		</div>
 		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/agents/">Agents</a>
+		</div>
+		<div class="rowitem passive submenu">
 			<a href="/panel/analytics/crawlers/">Crawlers</a>
 		</div>
 	{{end}}
