--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -191,6 +191,8 @@ a {
 	font-weight: normal;
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
+	margin-block-start: 0;
+	margin-block-end: 0;
 	display: inline;
 }
 .rowsmall {
