Added a time graph for individual user agents. We now have an Advanced Forum Permissions Editor providing more granular control over permissions. Tweaked the button CSS and some other bits and pieces. Added a details section to the View Count Graph. Renamed a few template files for the sake of consistency and for an upcoming refactor. Unknown user agents are now logged in debug mode. Added GetCopy() to the forum permissions store. Fixed a crash bug in the forum deletion action. Refactored the permissions list in the group permissions editor.

--- a/templates/panel-analytics-agents.html
+++ b/templates/panel-analytics-agents.html
@@ -3,7 +3,7 @@
 {{template "panel-menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
 		<div class="colstack_item colstack_head">
-			<div class="rowitem"><a>Agents (24 hours)</a></div>
+			<div class="rowitem"><a>User Agents (24 hours)</a></div>
 		</div>
 		<div id="panel_analytics_agents" class="colstack_item rowlist">
 			{{range .ItemList}}
