--- a/templates/account_own_edit_email.html
+++ b/templates/account_own_edit_email.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="colstack account account_emails">
-	{{template "account-menu.html" . }}
+	{{template "account_menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head rowhead">
 			<div class="rowitem"><h1>Emails</h1></div>
