--- a/templates/panel-analytics-agent-views.html
+++ b/templates/panel-analytics-agent-views.html
@@ -2,10 +2,10 @@
 <div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
-		<form id="timeRangeForm" name="timeRangeForm" action="/panel/analytics/views/" method="get">
+		<form id="timeRangeForm" name="timeRangeForm" action="/panel/analytics/agent/{{.Agent}}" method="get">
 			<div class="colstack_item colstack_head">
 				<div class="rowitem">
-					<a>Views</a>
+					<a>{{.Agent}} Views</a>
 					<select class="timeRangeSelector to_right" name="timeRange">
 						<option val="one-day"{{if eq .TimeRange "one-day"}} selected{{end}}>1 day</option>
 						<option val="twelve-hours"{{if eq .TimeRange "twelve-hours"}} selected{{end}}>12 hours</option>
@@ -15,18 +15,7 @@
 			</div>
 		</form>
 		<div id="panel_analytics_views" class="colstack_graph_holder">
-			<div class="ct_chart" aria-label="View Chart"></div>
-		</div>
-		<div class="colstack_item colstack_head">
-			<div class="rowitem"><a>Details</a></div>
-		</div>
-		<div id="panel_analytics_views_table" class="colstack_item rowlist" aria-label="View Table, this has the same information as the view chart">
-			{{range .ViewItems}}
-			<div class="rowitem panel_compactrow editable_parent">
-				<a class="panel_upshift unix_to_24_hour_time">{{.Time}}</a>
-				<span class="panel_compacttext to_right">{{.Count}} views</span>
-			</div>
-			{{end}}
+			<div class="ct-chart"></div>
 		</div>
 	</main>
 </div>
@@ -50,7 +39,7 @@ let seriesData = [{{range .PrimaryGraph.Series}}
 ];
 seriesData = seriesData.reverse();
 
-Chartist.Line('.ct_chart', {
+Chartist.Line('.ct-chart', {
   labels: labels,
   series: [seriesData],
 }, {
