Renamed the pre_render_panel_mod_log pre-render hook to pre_render_panel_modlogs. Added the half-second task type, you'll why later ;) Reduced the amount of code duplication in the panel routes (saved a hundred lines). Added the two day time range option for graphs. We now track the discord, lynx and blank user agents. Renamed some template files for consistency and to help stamp out some duplicate code.
Began work on topic move.

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -31,6 +31,7 @@
 				<select class="mod_floater_options">
 					<option val="delete">Delete them</option>
 					<option val="lock">Lock them</option>
+					<option val="move">Move them</option>
 				</select>
 				<button>Run</button>
 			</div>
