--- a/templates/panel-analytics-views.html
+++ b/templates/panel-analytics-views.html
@@ -7,6 +7,7 @@
 				<div class="rowitem">
 					<a>Views</a>
 					<select class="timeRangeSelector to_right" name="timeRange">
+						<option val="two-days"{{if eq .TimeRange "two-days"}} selected{{end}}>2 days</option>
 						<option val="one-day"{{if eq .TimeRange "one-day"}} selected{{end}}>1 day</option>
 						<option val="twelve-hours"{{if eq .TimeRange "twelve-hours"}} selected{{end}}>12 hours</option>
 						<option val="six-hours"{{if eq .TimeRange "six-hours"}} selected{{end}}>6 hours</option>
