--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -319,6 +319,8 @@ h1, h3 {
 	border: 1px solid var(--header-border-color);
 	border-bottom: 2px solid var(--header-border-color);
 	padding: 8px;
+	padding-left: 12px;
+	padding-right: 12px;
 }
 
 @keyframes fadein {
